<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MindPathsApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="info_action">Information</string>
    <string name="start_word_desc">Starting Word</string>
    <string name="start_word">Start</string>
	<string name="target_word_desc">Target Word</string>
    <string name="target_word">Target</string>
    <string name="word1">Neighbour 1</string>
    <string name="word2">Neighbour 2</string>
    <string name="word3">Neighbour 3</string>
    <string name="word4">Neighbour 4</string>
    <string name="word5">Neighbour 5</string>
    <string name="word6">Neighbour 6</string>
    <string name="word7">Neighbour 7</string>
    <string name="word8">Neighbour 8</string>
	<string name="word9">Neighbour 9</string>
	<string name="word10">Neighbour 10</string>
	<string name="word11">Neighbour 11</string>
	<string name="word12">Neighbour 12</string>
	<string name="completed_toast">Task completed successfully</string>
	<string name="exceeded_steps_toast">Path length exceeded, new pair provided</string>
	<string name="path_text">Path</string>
	<string name="path_button">Path</string>
	<string name="general_info_title">General Info</string>
	<string name="general_info_dialog_text">The idea is reaching the target word (bottom right) from the initial one (top left) choosing among the neighbour words of the latter one. That is updated with the chosen word and so their neighbours are. Through the red button at the bottom is possible to check the current path. Buttons at the right provide a new word pair (the upper one) or reset the current one (the below one).\n\nFurther info about experiment\'s goal on socientize.eu.</string>
</resources>
