<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="com.bifi.mindpathsapp.MindPathsMainActivity" >
	
    <RelativeLayout 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_centerVertical="true" >
    
    <Button 
	        android:id="@+id/start_word_button"
	        android:layout_width="110dp"
	        android:layout_height="110dp"
	        android:contentDescription="@string/start_word_desc"
	        android:text="@string/start_word"
	        android:background="@drawable/spherel"
	        android:layout_alignParentLeft="true"
        	android:layout_alignParentTop="true"
        	android:textColor="#ffffff"
        	android:textSize="12sp"/>

    <Button 
	        android:id="@+id/word12_button"
	        android:layout_width="110dp"
	        android:layout_height="24dp"
	        android:contentDescription="@string/word12"
	        android:text="@string/word12"
	        android:layout_marginRight="-158dp"
        	android:layout_alignRight="@+id/start_word_button"
        	android:background="@drawable/wordbutton"
        	android:textColor="#2b3126"
        	android:textSize="12sp"/>
    
    <Button 
	        android:id="@+id/word10_button"
	        android:layout_width="110dp"
	        android:layout_height="24dp"
	        android:contentDescription="@string/word10"
	        android:text="@string/word10"
	        android:layout_marginRight="-142dp"
        	android:layout_alignRight="@+id/start_word_button"
        	android:layout_below="@+id/word12_button"
        	android:background="@drawable/wordbutton"
        	android:textColor="#2b3126"
        	android:textSize="12sp"/>
    
    <Button 
	        android:id="@+id/word8_button"
	        android:layout_width="110dp"
	        android:layout_height="24dp"
	        android:contentDescription="@string/word8"
	        android:text="@string/word8"
	        android:layout_marginRight="-128dp"
        	android:layout_alignRight="@+id/start_word_button"
        	android:layout_below="@+id/word10_button"
        	android:background="@drawable/wordbutton"
        	android:textColor="#2b3126"
        	android:textSize="12sp"/>
    
     <Button 
	        android:id="@+id/word6_button"
	        android:layout_width="110dp"
	        android:layout_height="24dp"
	        android:contentDescription="@string/word6"
	        android:text="@string/word6"
	        android:layout_marginRight="-114dp"
        	android:layout_alignRight="@+id/start_word_button"
        	android:layout_below="@+id/word8_button"
        	android:background="@drawable/wordbutton"
        	android:textColor="#2b3126"
        	android:textSize="12sp"/>  
        	
	<Button 
	        android:id="@+id/word4_button"
	        android:layout_width="110dp"
	        android:layout_height="24dp"
	        android:contentDescription="@string/word4"
	        android:text="@string/word4"
	        android:layout_marginRight="-100dp"
        	android:layout_alignRight="@+id/start_word_button"
        	android:layout_below="@+id/word6_button"
        	android:background="@drawable/wordbutton"
        	android:textColor="#2b3126"
        	android:textSize="12sp"/>
	
	<Button 
	        android:id="@+id/word2_button"
	        android:layout_width="110dp"
	        android:layout_height="24dp"
	        android:contentDescription="@string/word2"
	        android:text="@string/word2"
	        android:layout_marginRight="-86dp"
        	android:layout_alignRight="@+id/start_word_button"
        	android:layout_below="@+id/word4_button"
        	android:background="@drawable/wordbutton"
        	android:textColor="#2b3126"
        	android:textSize="12sp"/>
    
	<Button 
	        android:id="@+id/word1_button"
	        android:layout_width="110dp"
	        android:layout_height="24dp"
	        android:contentDescription="@string/word1"
	        android:text="@string/word1"
	        android:layout_marginRight="-72dp"
        	android:layout_alignRight="@+id/start_word_button"
        	android:layout_below="@+id/word2_button"
        	android:background="@drawable/wordbutton"
        	android:textColor="#2b3126"
        	android:textSize="12sp"/>
			    
	<Button 
	        android:id="@+id/word3_button"
	        android:layout_width="110dp"
	        android:layout_height="24dp"
	        android:contentDescription="@string/word3"
	        android:text="@string/word3"
	        android:layout_marginRight="-58dp"
        	android:layout_alignRight="@+id/start_word_button"
        	android:layout_below="@+id/word1_button"
        	android:background="@drawable/wordbutton"
        	android:textColor="#2b3126"
        	android:textSize="12sp"/>
	    
	<Button 
	        android:id="@+id/word5_button"
	        android:layout_width="110dp"
	        android:layout_height="24dp"
	        android:contentDescription="@string/word5"
	        android:text="@string/word5"
	        android:layout_marginRight="-44dp"
        	android:layout_alignRight="@+id/start_word_button"
        	android:layout_below="@+id/word3_button"
        	android:background="@drawable/wordbutton"
        	android:textColor="#2b3126"
        	android:textSize="12sp"/>
	
	<Button 
	        android:id="@+id/word7_button"
	        android:layout_width="110dp"
	        android:layout_height="24dp"
	        android:contentDescription="@string/word7"
	        android:text="@string/word7"
	        android:layout_marginRight="-30dp"
        	android:layout_alignRight="@+id/start_word_button"
        	android:layout_below="@+id/word5_button"
        	android:background="@drawable/wordbutton"
        	android:textColor="#2b3126"
        	android:textSize="12sp"/>
	
    <Button 
	        android:id="@+id/word9_button"
	        android:layout_width="110dp"
	        android:layout_height="24dp"
	        android:contentDescription="@string/word9"
	        android:text="@string/word9"
	        android:layout_marginRight="-16dp"
        	android:layout_alignRight="@+id/start_word_button"
        	android:layout_below="@+id/word7_button"
        	android:background="@drawable/wordbutton"
        	android:textColor="#2b3126"
        	android:textSize="12sp"/>
	
    <Button 
	        android:id="@+id/word11_button"
	        android:layout_width="110dp"
	        android:layout_height="24dp"
	        android:contentDescription="@string/word11"
	        android:text="@string/word11"
	        android:layout_marginRight="-2dp"
        	android:layout_alignRight="@+id/start_word_button"
        	android:layout_below="@+id/word9_button"
        	android:background="@drawable/wordbutton"
        	android:textColor="#2b3126"
        	android:textSize="12sp"/>
	
    <Button 
	        android:id="@+id/target_word_button"
	        android:layout_width="105dp"
	        android:layout_height="105dp"
	        android:contentDescription="@string/target_word_desc"
	        android:text="@string/target_word"
	        android:background="@drawable/spherer"
	        android:layout_alignParentRight="true"
        	android:layout_below="@+id/word11_button"
        	android:textColor="#ffffff"
        	android:textSize="12sp"/>
    
    <Button 
	        android:id="@+id/arrow_button"
	        android:layout_width="40dp"
	        android:layout_height="55dp"
	        android:layout_marginLeft="-23dp"
            android:layout_marginTop="-38dp"
	        android:background="@drawable/arrow"
        	android:layout_alignTop="@+id/target_word_button"
        	android:layout_alignLeft="@+id/target_word_button"/>
	<Button 
	        android:id="@+id/path_button"
	        android:layout_width="70dp"
	        android:layout_height="25dp"
        	android:layout_alignBottom="@+id/target_word_button"
        	android:layout_alignLeft="@+id/target_word_button"
        	android:layout_marginLeft="-130dp"
	        android:text="@string/path_button"
	        android:background="@drawable/normal_button"
	        android:textColor="@color/text_color"
        	android:onClick="showPath"
        	android:textSize="12sp"
        	android:includeFontPadding="false"/>
	
		<Button 
	        android:id="@+id/reset_button"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
        	android:layout_above="@+id/target_word_button"
        	android:layout_alignParentRight="true"
        	android:layout_marginRight="18dp"
        	android:layout_marginBottom="20dp"
        	android:background="@drawable/reset_button"
        	android:onClick="resetPair"/>
    	    	
		<Button 
	        android:id="@+id/new_pair_button"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
        	android:layout_above="@+id/reset_button"
        	android:layout_alignParentRight="true"
        	android:layout_marginRight="18dp"
        	android:layout_marginBottom="10dp"
        	android:background="@drawable/new_pair_button"
        	android:onClick="newPair"/>
    	</RelativeLayout>
</RelativeLayout>
